# korquanttools

./: .gitignore  LICENSE.md  README.md  compare_with_fdr.ipynb  financedashboard.ipynb  krx.ipynb  nh.ipynb  pyproject.toml  test_json.json  woori_guide.ipynb
financedashboard/: __init__.py
financedashboard/pricevolume/: __init__.py  generator.py  loader.py  processor.py
korquanttools/: __init__.py
korquanttools/pricevolume/: __init__.py  config.py  generator.py  loader.py  processor.py  utils.py
notebooks/: DAUM_industry_grouping.ipynb  KOSPI_index_creation.ipynb  bok_risk_free_rate.xls  config.py  corr_clustering.ipynb  eventstudy_PEAD.ipynb  factor_research.ipynb  ff3.ipynb  financedashboard.ipynb  get_economiccalendar.ipynb  get_investing_calendar.py  krx_funda.ipynb  krx_industry.ipynb  ksic.xlsx  stockmarket_EDA.ipynb  woori_group_visualization_demo.ipynb
notebooks/finda6/: finda6.ipynb
notebooks/finda6/data/: caps.csv  rtns.csv
notebooks/woori_data/: FnGuide_WICS_and_KRX_KSIC.xlsx  ksic_lv1lv2.xlsx
pricevolume/: __init__.py  config.py  generator.py  krx.ipynb  loader.py  processor.py  utils.py
streamlit_page/: st_main.py  st_utils.py
tests/: test_financedashboard.py
