[tool.poetry]
name = "FinanceDashboard"
version = "0.1.0"
description = ""
authors = ["jaepil-choi <chljeffreyz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
beautifulsoup4 = "^4.10.0"
finance-datareader = "^0.9.31"
OpenDartReader = "^0.1.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
