[tool.poetry]
name = "korquanttools"
version = "0.1.0"
description = ""
authors = ["jaepil-choi <chljeffreyz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
beautifulsoup4 = "^4.10.0"
finance-datareader = "^0.9.31"
OpenDartReader = "^0.1.6"
jupyterlab = "^3.2.1"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
scikit-learn = "^1.0.1"
lxml = "^4.6.3"
streamlit = "^1.9.0"
QuantStats = "^0.0.56"
squarify = "^0.4.3"
investpy = "^1.0.8"
plotly = "^5.8.2"
xlrd = "^2.0.1"
statsmodels = "^0.13.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
